syntax = "proto3";

package item;

import "google/protobuf/timestamp.proto";
import "item/message.proto";

option go_package = "stubs";

service ItemService {
    rpc CreateItem(CreateItemRequest) returns (Item) {};
    rpc Find(FindRequest) returns (FindResponse) {};
    rpc UdpateItem(UpdateRequest) returns (UpdateResponse) {};
    rpc DeleteItem(DeleteRequest) returns (DeleteResponse) {};
}

